# ransomware

./: c2_rsa_key  c2_rsa_key.pub
c2/: .gitignore  Cargo.toml  notes.md
c2/src/: main.rs
c2/src/communication/: handler.rs  http_session.rs  message.rs  mod.rs  session.rs  tcp_session.rs
c2/src/core/: agent.rs  c2.rs  mod.rs
c2/src/core/cli/: app.rs  cli.rs  commands.rs  keys.rs  mod.rs  ui.rs
c2/src/server/: mod.rs
c2/src/server/communication/: http_session.rs  message.rs  mod.rs  tcp_session.rs
c2/src/server/listeners/: http.rs  listener_trait.rs  mod.rs  tcp.rs
c2/src/tasking/: agent_command.rs  mod.rs  tasking.rs
c2/src/utils/: cli.rs  logging.rs  mod.rs  utils.rs
decrypt/: Cargo.toml
decrypt/src/: decrypt.rs  logger.rs  main.rs  targeting.rs
infect/: Cargo.toml  README.md  config_unix.toml  config_windows.toml  notes.md
infect/files/: other_files.txt  ransom_log.txt  skipped_extentions.txt  target_files.txt
infect/src/: main.rs
infect/src/communication/: beacon.rs  beacon_http.rs  codec.rs  message.rs  mod.rs
infect/src/communication/channels/: http.rs  mod.rs  tcp.rs
infect/src/communication/comm/: channel.rs  http.rs  tcp.rs
infect/src/core/: agent_state.rs  mod.rs  ransom.rs  ransom_linux.rs  ransom_windows.rs  targeting.rs
infect/src/crypto/: decryption.rs  encryption.rs  public.pem
infect/src/post/: command_handler.rs  commands.rs  mod.rs
infect/src/utils/: config.rs  logger.rs  mod.rs  note.rs
