[package]
name = "c2"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = {version = "0.4.41", features = ["serde"]}
crossterm = "0.29.0"
serde_json = "1.0.140"
serde = { version = "1.0.219", features = ["derive"]}
tokio = { version = "1.45.0", features = ["full"]}
async-trait = "0.1.88"
socket2 = "0.5.9"
tokio-util = {version = "0.7.15", features = ["full"] }
bytes = "1.10.1"
futures = "0.3.31"
clap = { version = "4.5.38", features = ["derive"] }
uuid = { version = "1.16.0", features = ["v4"]}
shell-words = "1.1.0"
