[package]
name = "infect"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2"
aes = "0.8.4"
rsa = "0.9.7"
rand = "0.8.5"
openssl = "0.10.73"
pkcs1 = "0.7.5"
pem = "3.0.4"
chrono = "0.4"
sys-info = "0.9"
gethostname = "1.0.1"
clap = { version = "4.5.39", features = ["derive"] }
local-ip-address = "0.6.3"
sysinfo = "0.35.2"
uuid = { version = "1.17.0", features = ["v4"] }
tokio = { version = "1.45.1", features = ["full"] }
public-ip = "0.2.2"
serde_json = "1.0.104"
serde = { version = "1.0.219", features = ["derive"] }
bytes = "1.10.1"
tokio-util = {version = "0.7.15", features = ["full"] }
futures = "0.3.31"
toml = "0.8.23"
config = "0.15.11"
zeroize = "1.8.1"
